--- a/Hyperconnecte.uproject
+++ b/Hyperconnecte.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{DA1D9169-4D0A-775B-5DCB-B28E83B9B539}",
+	"EngineAssociation": "5.5",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
