--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -34,6 +34,10 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.VirtualTextures=True
+r.GPUSkin.Support16BitBoneIndex=True
+r.GPUSkin.UnlimitedBoneInfluences=True
+r.SkinCache.DefaultBehavior=0
+SkeletalMesh.UseExperimentalChunking=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
