--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,6 @@ ManualIPAddress=
 EditorStartupMap=/Game/Maps/Main_Global.Main_Global
 GameDefaultMap=/Game/Maps/Main_Global.Main_Global
 
+[/Script/Engine.RendererSettings]
+r.CustomDepth=3
+
