Ajout du choix pour accepter ou refuser le tél

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,4 +18,5 @@ GameDefaultMap=/Game/Maps/Main_Global.Main_Global
 
 [/Script/Engine.RendererSettings]
 r.CustomDepth=3
+r.Nanite.ProjectEnabled=True
 
