--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -50,3 +50,7 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+DefaultGraphicsPerformance=Maximum
+TargetedHardwareClass=Desktop
+
